--- a/client/display-users.html
+++ b/client/display-users.html
@@ -5,43 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User List</title>
     <style>
-        table {
-            width: 100%;
-            border-collapse: separate;
-            border-spacing: 0;
-            border-radius: 8px;
-            overflow: hidden;
-            background-color: #ffffff;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        th, td {
-            padding: 12px;
-            border-bottom: 1px solid #e9ecef;
-            text-align: left;
-            font-family: 'Arial', sans-serif;
-            font-size: 15px;
+        body {
+            font-family: 'Verdana', sans-serif;
+            background-color: #f4f4f9;
             color: #333;
+            margin: 0;
+            padding: 20px;
+            line-height: 1.6;
         }
+
+        h1 {
+            color: #007BFF;
+            text-align: center;
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        table {
+            width: 80%;
+            margin: 0 auto;
+            border-collapse: collapse;
+            border: 1px solid #ddd;
+            border-radius: 12px;
+            overflow: hidden;
+        }
+
+        th, td {
+            padding: 15px;
+            text-align: center;
+            border-bottom: 1px solid #ddd;
+            font-size: 14px;
+        }
+
         th {
-            background-color: #343a40;
-            color: #ffffff;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
+            background-color: #6c757d;
+            color: #fff;
+            font-weight: bold;
+            text-transform: capitalize;
         }
+
         td {
-            background-color: #f8f9fa;
+            background-color: #f4f4f9;
+            color: #555;
         }
-        tr:hover td {
-            background-color: #dee2e6;
+
+        tr:nth-child(even) {
+            background-color: #e9ecef;
         }
+
+        tr:hover {
+            background-color: #007BFF;
+            color: white;
+        }
+
         tr:last-child td {
             border-bottom: none;
         }
     </style>
-     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>User List</h1>
+    <h1>Users</h1>
     <table id="usersTable"></table>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="display-users.js"></script>
